--- a/package.json
+++ b/package.json
@@ -16,23 +16,14 @@
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-preset-env": "^1.6.1",
         "babel-preset-stage-2": "^6.24.1",
-        "browser-sync": "^2.23.2",
         "css-hot-loader": "^1.3.9",
         "css-loader": "^0.28.11",
+        "electron": "^2.0.6",
         "eslint-friendly-formatter": "^4.0.1",
         "eslint-loader": "^2.0.0",
         "extract-text-webpack-plugin": "^3.0.2",
-        "gulp": "^3.9.1",
-        "gulp-concat": "^2.6.1",
-        "gulp-jshint": "^2.1.0",
-        "gulp-rename": "^1.2.2",
-        "gulp-sequence": "^1.0.0",
-        "gulp-uglify": "^3.0.0",
-        "gulp-uglify-es": "^0.1.3",
-        "gulp-util": "^3.0.8",
-        "gulp-watch": "^5.0.0",
         "html-loader": "^0.5.5",
-        "node-sass": "^4.9.0",
+        "node-sass": "^4.9.2",
         "on-build-webpack": "^0.1.0",
         "postcss-loader": "^2.1.5",
         "sass-loader": "^7.0.3",
@@ -54,7 +45,6 @@
         "babel-polyfill": "^6.26.0",
         "json-formatter-js": "^2.2.0",
         "vue": "^2.5.16",
-        "vue-property-decorator": "^6.0.0",
-        "typedock": "latest"
+        "vue-property-decorator": "^6.0.0"
     }
 }
